<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
                name="viewModel"
                type="com.example.mytrip.ui.create.MainViewModel" />

    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorLightGray">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/colorPrimaryDark" />

            <EditText
                    android:id="@+id/editDistance"
                    style="@style/mCustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:hint="@string/distancia"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:text="@={viewModel.distance}" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:text="@string/total_de_quilometros"
                    android:textAllCaps="true"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="12sp" />

            <EditText
                    android:id="@+id/editPrice"
                    style="@style/mCustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:hint="@string/preco"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:text="@={viewModel.price}" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:text="@string/preco_por_litro"
                    android:textAllCaps="true"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="12sp" />

            <EditText
                    android:id="@+id/editAutonomy"
                    style="@style/mCustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:hint="@string/autonomia"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:text="@={viewModel.autonomy}" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:text="@string/kms_por_litro"
                    android:textAllCaps="true"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="12sp" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:gravity="center"
                    android:text="@string/gasto_total"
                    android:textAllCaps="true"
                    android:textSize="12sp" />

            <TextView
                    android:id="@+id/textResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@={viewModel.results}"
                    android:textAllCaps="true"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="35sp"
                    android:textStyle="bold" />

            <Button
                    android:id="@+id/buttonCalculate"
                    style="@style/CustomButtonStyle"
                    android:background="@drawable/round_btn"
                    android:onClick="@{() -> viewModel.handleCalculateButtonClick()}"
                    android:text="@string/calcular" />

            <Button
                    android:id="@+id/buttonSave"
                    style="@style/CustomButtonStyle"
                    android:background="@drawable/round_btn_red"
                    android:onClick="@{() -> viewModel.handleSaveButtonClick()}"
                    android:text="@string/save" />

            <Button
                    android:id="@+id/buttonExport"
                    style="@style/CustomButtonStyle"
                    android:background="@drawable/round_btn_blue"
                    android:onClick="@{() -> viewModel.handleExportButtonClick()}"
                    android:text="@string/export" />

        </LinearLayout>

    </ScrollView>

</layout>